# ChangeLog for dev-util/cucumber
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.71 2014/04/05 23:45:22 mrueg Exp $

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> cucumber-1.2.1.ebuild,
  cucumber-1.3.10.ebuild, cucumber-1.3.2.ebuild:
  Remove ree18 and ruby18 target.

*cucumber-1.3.10 (13 Feb 2014)

  13 Feb 2014; Hans de Graaff <graaff@gentoo.org> +cucumber-1.3.10.ebuild:
  Version bump.

  01 Feb 2014; Akinori Hattori <hattya@gentoo.org> cucumber-1.2.1.ebuild:
  ia64 stable wrt bug #493780

  01 Feb 2014; Akinori Hattori <hattya@gentoo.org> cucumber-1.3.2.ebuild:
  keyword ~ia64 wrt bug #471306

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> cucumber-1.2.1.ebuild:
  Stable for x86, wrt bug #493780

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> cucumber-1.2.1.ebuild:
  amd64 stable, bug 493780

  02 Jan 2014; Hans de Graaff <graaff@gentoo.org> cucumber-1.2.1.ebuild:
  Add alpha keyword that did not get included in a version bump.

  31 Dec 2013; Hans de Graaff <graaff@gentoo.org> -cucumber-0.7.3-r1.ebuild,
  -cucumber-1.1.4.ebuild:
  Cleanup.

  26 Dec 2013; Markus Meier <maekke@gentoo.org> cucumber-1.2.1.ebuild:
  arm stable, bug #493780

  22 Dec 2013; Jeroen Roovers <jer@gentoo.org> cucumber-1.2.1.ebuild:
  Stable for HPPA (bug #493780).

  29 May 2013; Hans de Graaff <graaff@gentoo.org> cucumber-1.3.2.ebuild:
  Fix rspec dependency: bug 471416.

  28 May 2013; Jeroen Roovers <jer@gentoo.org> cucumber-1.3.2.ebuild:
  Marked ~hppa (bug #471306).

*cucumber-1.3.2 (26 May 2013)

  26 May 2013; Hans de Graaff <graaff@gentoo.org> +cucumber-1.3.2.ebuild:
  Version bump. Dropped hppa,ia64,sparc keywords for new dependencies, bug
  471306.

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> cucumber-1.2.1.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  06 Jan 2013; Hans de Graaff <graaff@gentoo.org> -cucumber-0.10.2.ebuild,