@@ -1,9 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX cucumber-0.7.3-remove-rspec2.patch 2751 SHA256 5858aa5d98a7e43cfd085d691d70084352f243ffae6019990a5b1a5f135fa989 SHA512 4e81ea42ac4484cb6dd1cbda69514c3eb2e8cf34d5d0e566566485fa4bb43d3a2d23111c1575ca492dc78526049c129fb67501a92890ce79a313c1ac1b3f242a WHIRLPOOL 33d6258be81f6e3fcc5627dc84792089e0368a2d0678df5fa59e6e6a3155f039c14a073e8d9278e0601fa57a73c2db67b463f996940b15b896483ef218929ba5
 DIST cucumber-1.2.1.gem 333312 SHA256 11df76fb89c90fd37493560879dbd284665320fbfeb91372e7edb7f4c68cdc26 SHA512 ec1e56974c312b3e39410bc84b99e7e103685f35dd804275cefcf345534ce0ea032bda63d73524a1f90e6785a5b91b3c9d36c617591d52a0c507eb109401ae51 WHIRLPOOL a1625c859baacced783552e2526f00e9f291d1a12d6900f2d84c3551c19394aaf89736dd03670a6b4f327887bf4100c6a990d6b7bd88f0a623b82afc61bd2a2e
 DIST cucumber-1.3.10.gem 273408 SHA256 f6beb70c1652b10784938bfd6bcd69f31ce6c5a6d198ae4d046bfb1c568f07bd SHA512 59f4a03c91be56d8a525590532ae6ff2d8bc3911f9f93fd10730540aa5fb79a0164cea9569d4d120e577645daa753d1c7d2888641a5c8e35cd37895e495c0f62 WHIRLPOOL f576b5dd9b5e83afac85c69337f48f48d890f9e7b21351d6d1ffa1d62c0ba808818f26f76598a1578cbde30e53bfc345cfaff8426e6a5c6967aae542c4311008
+DIST cucumber-1.3.14.gem 276480 SHA256 5ff619d583180dbd53fbe6739607cb66bdf79c548c9de103263694d58efe196e SHA512 9f68da70e4850c1385e4a5e7c1bd86eb99a0e24081b7622c8dc5c5ed018e034d72c4fba60cc3ea8dcadd41e323aac0283a6481747a3f27f99638a155e5f602a1 WHIRLPOOL fcc103d08556568ff3a82027199241e8ace7f6b825de160babd4643c2693c49c71af5db411a52886f106ce6fbfc285bf345100523aa5690b3fad92d50256449f
 DIST cucumber-1.3.2.gem 275968 SHA256 18c9d38cea1b164d57afa1346a2d7c0cc18062687ee66b28ffcf39a53f6c086e SHA512 7d6be78dfe72a7aae868ff91308a7ea8ea01fe71f53b705f2da89cb9965e676930c1826f87d62d86e1c2192fc63d966b634943b767da23d8bc6c41cac074a42b WHIRLPOOL 254445cd39f03de98601af820a68f5b16674cbe8706663ba7806048af060abf9bc6bbd735a79696df0613effbeea3b07324de60749a55a7ff9bff1b2b52b0fa4
 EBUILD cucumber-1.2.1.ebuild 1958 SHA256 c838692634292c751220ac17cfeed50bf52b2810311449e1558ad1558aff610d SHA512 3a916db4a7d28effd34d8774158b854a02670e824329e6328da3aa7174a2e25425b55c8933efdd7611bfe6f934ee812b1d43b12df03e2c3ab35a4b7dc00b5f68 WHIRLPOOL 74d2f31c169d6fd9139b948a2746c20707afce0d2c4f739456e081610500120f3d94f88725d72cce13601b90a806ae5d8027a42b37e5a5d3a8929fcdc7b1ee72
 EBUILD cucumber-1.3.10.ebuild 2145 SHA256 69831460c571ee62f770e9db82e4a07658c090ec9ea165b9da26756b827ba221 SHA512 ad4a72ab5e669aa83fe6cc8139c8bad9bef523583641bf207d6162f80517e271be47e3e05d5205eb2c4e2651f4947ee3a58df1466a40fe8bee3bc470dbf4935a WHIRLPOOL 5fb04e1bbbcc785dd56f26e8c3a929697bd141deabae7244b1c70da648df147179c958a8989e27b216adf829af187dd3c73fee9dcb626f3581c1f4b144c6d3f3
+EBUILD cucumber-1.3.14.ebuild 2319 SHA256 b8b214556c24405753b62d4f2e202981af79748181132416ae32d2e7a84f8273 SHA512 5c19b63b38a00a50001f391120499c9996cf6bb03cc7d1f5898e724f7494543add2dd94e0a80d1f648ded0485cd38435dd36d188601b79dc1433ac1438b64dac WHIRLPOOL 9064d0eb87586ddfd02119c457b35d7c9c32fc8ba4c4e84d6ec12b79c2ef79cccf46e82b5024aeec49dd73938d63e63dbd9eeab5ed6215cf577191f8c1dadf65
 EBUILD cucumber-1.3.2.ebuild 2049 SHA256 dd1a52a1247198e13c615ed371acb69be10c56168bbcad2cf73af7be6b9d9e81 SHA512 7c9f609846e88cdd14cc9b1d040192df3b0085cb30d2c040b562585ee7c11fd8f4cb32e136dbafd85b5e799820b8ee2024aa767f2a29a2cbc359f2e3549260be WHIRLPOOL c23c3765d7f13c50390a213a27d433dbfc0adab682e9983efa62ea73d9a88541f78032e2f8f15f9574fb3197881fb50e0e657c747c35d22cce5d0c2613769836
-MISC ChangeLog 10297 SHA256 5501412725d16c03d7b93bd8950546ccd14df464f92cd50339c8bd3e8ec11067 SHA512 c66d632e388c5db06f14fa1388743a3e17fa1737b31413c86ea0a82acb0dab33aab123c4e09e7513cc676e0f18965ef7d3f4840151c8ed38d2d957779a51dac7 WHIRLPOOL 98b01babd6965d75d45a35d3ade11f8ef70529e104d27c3bbf6a9516b2310184ce04f184f7d883dcafbb466820aec4de2be7534c2d21a6360916c2bc92fc32ab
+MISC ChangeLog 10422 SHA256 29792fca179a1ac797e0cf5c57554f2833be6f8c4be4884a30a8c15760687826 SHA512 56966bf2a01c5c96092039b6820686024eee911ff529141b849d74b2c06b446ef0554208c5b48eda0b7757c83ca6172e7193f919a303e4e2133dd561dd7d9b6c WHIRLPOOL d80340b422f1f5e1c1619d8ccff29ea1a08a32be2867a55917407e969518750b048be4519c81a773a79a4b46fa7567d20e9b7229b191bb5ac2647ae8c9a3836a
 MISC metadata.xml 201 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad SHA512 3131e5281b343002ef359d7199da425d3f9f5406ef4ddd9332eccad6b78e3ced62adedd4dfe14538db391d2590811df6f2a15cada5a1e924479a0189cd69b7d3 WHIRLPOOL 8631f9384237d55afedca6bba2e9e6b80f5d260ec195de52a736072d4c743579e435c363404e0561a05708c07fbb92e21d69aaff1273b9f724d25b3f59b26fe6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF0EAREIAAYFAlNvH4YACgkQiIP6VqMIqNd9VQD+KlXHEPlDIo7gYimPwGLJ71N0
+Edu/gfLBJSigAVTVGuEA902egzqf6DCJOjmoAejpsi8jo84Ke8cN5fCw+7Ndooo=
+=cIbC
+-----END PGP SIGNATURE-----
