@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=ruby_targets_ruby19? ( test? ( >=dev-ruby/rspec-2.13.0[ruby_targets_ruby19] >=dev-ruby/nokogiri-1.5.2[ruby_targets_ruby19] >=dev-ruby/syntax-1.0.0[ruby_targets_ruby19] >=dev-util/aruba-0.5.2[ruby_targets_ruby19] >=dev-ruby/json-1.7[ruby_targets_ruby19] dev-ruby/bundler[ruby_targets_ruby19] >=dev-util/cucumber-1.3[ruby_targets_ruby19] ) ) test? ( ruby_targets_ruby19? ( >=dev-ruby/builder-2.1.2[ruby_targets_ruby19] >=dev-ruby/diff-lcs-1.1.3[ruby_targets_ruby19] >=dev-ruby/gherkin-2.12.0[ruby_targets_ruby19] >=dev-ruby/multi_json-1.7.5[ruby_targets_ruby19] >=dev-ruby/multi_test-0.1.1[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
+DESCRIPTION=Executable feature scenarios
+EAPI=5
+HOMEPAGE=http://github.com/aslakhellesoy/cucumber/wikis
+IUSE=examples test test elibc_FreeBSD ruby_targets_ruby19 test test
+KEYWORDS=~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~x86
+LICENSE=Ruby
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/builder-2.1.2[ruby_targets_ruby19] >=dev-ruby/diff-lcs-1.1.3[ruby_targets_ruby19] >=dev-ruby/gherkin-2.12.0[ruby_targets_ruby19] >=dev-ruby/multi_json-1.7.5[ruby_targets_ruby19] >=dev-ruby/multi_test-0.1.1[ruby_targets_ruby19] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 )
+SLOT=0
+SRC_URI=mirror://rubygems/cucumber-1.3.14.gem
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	fac675dcccf94392371a6abee62d909f	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=300861b08658a234ff9f97e1b69763e5
