@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/cucumber
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.71 2014/04/05 23:45:22 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cucumber/ChangeLog,v 1.72 2014/05/11 06:58:13 graaff Exp $
+
+*cucumber-1.3.14 (11 May 2014)
+
+  11 May 2014; Hans de Graaff <graaff@gentoo.org> +cucumber-1.3.14.ebuild:
+  Version bump.
 
   05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> cucumber-1.2.1.ebuild,
   cucumber-1.3.10.ebuild, cucumber-1.3.2.ebuild:
